--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "re-gen": "./bin/index.js"
   },
   "dependencies": {
+    "asn1-packer": "^1.0.0",
+    "btoa": "^1.2.1",
     "colors": "^1.3.3",
     "commander": "^2.20.0",
     "fs": "0.0.1-security",
