--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rpofuk/re-gen",
-  "version": "1.0.0",
+  "name": "@rpofuk/tpm2-asn-packer",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
